fix(map-sync): stabilize terrain delivery and runtime
Correct surface sampling and persist sampler migrations so grass and water use Xaero-compatible terrain data.

Backfill explored chunks without indexes, scan around unloaded dirty work, defer Xaero injections safely, batch Merkle work, and keep network decompression off the render thread.

Pin Minecraft run tasks to Java 17 to avoid the GLFW/OpenAL native crashes observed with Java 25.

Tests: gradlew.bat clean test build --no-daemon (145 tests)